[package]
name = "mac-events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
hex = { version = "0.4.3", features = ["serde"] }
rusb = "0.9.3"
serde = { "version" = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.34.0", features = ["full"] }
